--- a/restaurant.html
+++ b/restaurant.html
@@ -35,7 +35,7 @@
   <main id="maincontent">
     <!-- Beginning map -->
     <section id="map-container">
-      <div id="map" aria-label="map" role="contentinfo" tabindex="0"></div>
+      <div id="map" aria-label="map" role="application" tabindex="0"></div>
     </section>
     <!-- End map -->
     <!-- Beginning restaurant -->
@@ -67,6 +67,7 @@
   <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js" integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw==" crossorigin=""></script>
   <!-- Beginning scripts -->
   <!-- Database helpers -->
+  <script src="js/localforage.min.js"></script>
   <script src="js/dbhelper.js"></script>
   <!-- Main javascript file -->
   <script src="js/restaurant_info.js"></script>
